create folders // balise html // css selecteur

--- a/html/index.html
+++ b/html/index.html
@@ -1,12 +1,148 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
+	<meta charset="utf-8" />
 
-	<title></title>
-	<link rel="stylesheet" href="css/styles.css">
+	<title>Le titre de notre page</title>
+	<link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
+	<h1>Ceci est un titre de niveau 1</h1>
+	<h2>Ceci est un titre de niveau 2</h2>
+	<h3>Ceci est un titre de niveau 3</h3>
+	<h4 id="mon_ancre">Ceci est un titre de niveau 4</h4>
+	<h5>Ceci est un titre de niveau 5</h5>
+	<h6>Ceci est un titre de niveau 6</h6>
 
+	<h4>Ceci est un titre de niveau 4</h4>
+	<h5>Ceci est un titre de niveau 5</h5>
+	<h6>Ceci est un titre de niveau 6</h6>
+	<h6>Ceci est un titre de niveau 6</h6>
+
+	<h5>Ceci est un titre de niveau 5</h5>
+	<h6>Ceci est un titre de niveau 6</h6>
+	<h6>Ceci est un titre de niveau 6</h6>
+
+	<!-- Ceci est un commentaire -->
+
+
+
+
+
+    <section>
+    	<h2>Fruits</h2>
+    	<article>
+    		<h3>Mangue</h3>
+    		<p>ceci est un texte sur la mangue</p>
+    		<img src="../images/mangue.png" alt="image d'une mangue" width="118" height="100">
+    		<!-- Pour l'image, attention à bien renseinger le bon chemin. Attention aussi à l'extention (jpg, png ...) -->
+    	</article>
+    	<article>
+    		<h3>Banane</h3>
+    		<p>ceci est un texte sur la banane</p>
+    		<img src="../images/banane.jpg" alt="image d'une banane" width="100" height="100">
+    	</article>
+    </section>    
+
+    <!-- ------------ -->
+
+
+
+
+
+    <h2>Fruits</h2>
+    <ul>
+    	<li>Fraises</li>
+    	<li>Framboises</li>
+    	<li>Cerises</li>
+	</ul>
+
+	<ol>
+    	<li>Fraises</li>
+    	<li>Framboises</li>
+    	<li>Cerises</li>
+	</ol>
+
+	<!-- ------------ -->
+
+
+
+
+
+	<p>ceci est un texte<br /> sur la banane</p>
+
+	<!-- ------------ -->
+
+
+
+
+
+	<p>La banane provient du bananier</p>
+	<p>La <strong>banane</strong> provient du <em>bananier</em></p>
+	<!-- <em> Pour mettre du texte un peu en valeur -->
+	<!-- <strong> Pour mettre du texte bien en valeur -->
+	<p><mark>test</mark></p>
+	<!-- <mark> Pour faire ressortir visuellement une portion de texte. 
+		L'extrait n'est pas forcément important, mais on veut qu'il se distingue du reste du texte. 
+		Par exemple, cela peut être utile pour faire ressortir un texte pertinent après une recherche sur votre site. -->
+	<!-- ATTENTION, la mise en forme par défaut permet d'identifier ces éléments pendant la phase de développement ! Par exemple, il ne faut pas considérer que la balise strong est faite pour mettre du texte en gras ! -->
+
+	<!-- ------------ -->
+
+
+
+
+
+	<p>Aller à la page de <a href="contact.html">contact</a></p>
+
+
+	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed in felis tincidunt, condimentum lorem eu, venenatis ex. In hac habitasse platea dictumst. Maecenas non convallis sem, ac blandit libero. Mauris viverra quam sit amet justo tempor pellentesque. Pellentesque fringilla enim vitae blandit lacinia. Donec vitae est sit amet magna eleifend euismod non a dolor. Integer tempor est nec risus placerat egestas. In efficitur mauris sed feugiat convallis. Nunc egestas porttitor justo non feugiat. Curabitur risus nunc, facilisis sit amet tempor sed, ornare vitae libero.<br /><br />
+
+	Nunc consectetur, dolor ac eleifend porta, ante nulla feugiat quam, non luctus ligula tellus in ipsum. Aenean in imperdiet odio. Fusce varius eget felis at rutrum. Sed dictum ut lorem vitae dictum. Cras quis tincidunt nisi. Mauris at tincidunt velit. Ut sollicitudin ligula ut urna feugiat faucibus. Nullam commodo urna justo, ut congue nisi facilisis ut. Sed posuere, lorem a laoreet blandit, ipsum turpis tempor tortor, eu luctus ex dolor a ex. Proin nec dapibus arcu.<br /><br />
+
+	In ultricies pharetra ultrices. Vestibulum luctus libero ipsum, vitae ornare lacus consequat sed. Nam ultrices interdum eleifend. Suspendisse potenti. Nunc ultrices volutpat massa in malesuada. Maecenas condimentum massa sed ipsum scelerisque, in rhoncus mi semper. Pellentesque nisl odio, tempus vitae fermentum ut, condimentum faucibus lectus. Pellentesque tristique eu ante in suscipit.<br /><br />
+
+	Proin eu aliquam magna. Pellentesque leo urna, lobortis sed imperdiet sed, scelerisque eget erat. Donec lorem augue, finibus finibus mauris ac, egestas tincidunt augue. Morbi sollicitudin arcu ipsum, eget molestie lacus feugiat ut. Donec vulputate metus a purus interdum, vitae accumsan mauris varius. Suspendisse diam ipsum, vehicula ac pellentesque a, pellentesque vel diam. Nunc gravida, mauris at egestas congue, arcu leo porttitor mi, a bibendum urna quam quis dui.<br /><br />
+
+	Aliquam ac viverra arcu. Phasellus vitae urna sit amet nibh consectetur dapibus. Aliquam et nunc dapibus, varius lacus a, bibendum nunc. Praesent at metus in lectus volutpat eleifend. Pellentesque volutpat tellus id lorem rutrum lobortis. Nullam vitae sapien ut eros elementum consectetur. Phasellus tortor sapien, feugiat ac hendrerit id, laoreet nec orci. Ut sit amet rhoncus augue. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec a imperdiet sem.</p>
+
+
+	<p><a href="#mon_ancre">Aller à telle partie de mon site web</a></p>
+
+
+	<p>Bonjour. Souhaitez-vous visiter <a href="https://fr.wikipedia.org/" title="Vous ne le regretterez pas !">Wikipédia</a> ?</p>
+	<!--Vous pouvez utiliser l'attribut title  qui affiche une bulle d'aide lorsqu'on pointe sur le lien. Cet attribut est facultatif.-->
+
+	<p>Bonjour. Souhaitez-vous visiter <a href="https://fr.wikipedia.org/" title="Vous ne le regretterez pas !" target="_blank">Wikipédia</a> ?</p>
+	<!--Il est possible de « forcer » l'ouverture d'un lien dans une nouvelle fenêtre. Pour cela, on rajoutera target="_blank"-->
+
+	<p><a href="../fichiers/mangue.zip">Télécharger le fichier</a></p>
+
+	<!-- ---------- -->
+
+
+
+
+
+	<figure>
+    	<img src="../images/mangue.png" alt="image d'une mangue" width="118" height="100">
+    	<img src="../images/banane.jpg" alt="image d'une banane" width="100" height="100">
+    	<figcaption>Photos des différents fruits nécessaires dans la recette.</figcaption>
+	</figure>
+	<!--Si une image illustre le texte (et n'est pas seulement décorative), il est conseillé de la placer au sein d'une balise  <figure>. 
+		La balise  <figcaption>  permet d'écrire la légende de l'image.-->
+
+	<!-- ---------- -->
+
+
+
+
+	<h2 class="title2">Ceci est un titre</h2>
+	<h2 class="title2">Ceci est un titre</h2>
+	<h2 class="title2" id="title2">Ceci est un titre</h2>
+	<!-- .class   #id -->
+
+
+	<script src="../js/scripts.js"></script>
 </body>
 </html>
