Modifications faites dans le cours

--- a/html/index.html
+++ b/html/index.html
@@ -5,6 +5,8 @@
 
 	<title>Le titre de notre page</title>
 	<link rel="stylesheet" href="../css/styles.css">
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap" rel="stylesheet">
+	<script src="https://kit.fontawesome.com/4a7af62695.js" crossorigin="anonymous"></script>
 </head>
 <body>
 	<h1>Ceci est un titre de niveau 1</h1>
@@ -27,13 +29,13 @@
 
 
 
-
+	<i class="fab fa-adobe"></i>
 
     <section>
     	<h2>Fruits</h2>
     	<article>
-    		<h3>Mangue</h3>
-    		<p>ceci est un texte sur la mangue</p>
+    		<h3 class="mes_fruits">Mangue</h3>
+    		<p class="class1">ceci est un texte sur la mangue</p>
     		<img src="../images/mangue.png" alt="image d'une mangue" width="118" height="100">
     		<!-- Pour l'image, attention à bien renseinger le bon chemin. Attention aussi à l'extention (jpg, png ...) -->
     	</article>
@@ -137,6 +139,7 @@
 
 
 
+	<h2>Ceci est un titre de base</h2>
 	<h2 class="title2">Ceci est un titre</h2>
 	<h2 class="title2">Ceci est un titre</h2>
 	<h2 class="title2" id="title2">Ceci est un titre</h2>
