Ajouts pour le cours 3 (notions pour le responsive)

--- a/html/index.html
+++ b/html/index.html
@@ -7,8 +7,20 @@
 	<link rel="stylesheet" href="../css/styles.css">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap" rel="stylesheet">
 	<script src="https://kit.fontawesome.com/4a7af62695.js" crossorigin="anonymous"></script>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+
+	<nav>
+		<ul>
+			<li>
+				<a href="contact.html">Page contact</a>
+				<a href="responsive.html">Page responsive</a>
+			</li>
+		</ul>
+	</nav>
+
+
 	<h1>Ceci est un titre de niveau 1</h1>
 	<h2>Ceci est un titre de niveau 2</h2>
 	<h3>Ceci est un titre de niveau 3</h3>
