Ajout des propriétés flex

--- a/html/responsive.html
+++ b/html/responsive.html
@@ -31,6 +31,12 @@
 		<span class="bordures">Blablabla</span>
 	</div>
 
+	<div id="conteneur" class="bordures space">
+	    <div class="element elt1">Element </div>
+	    <div class="element elt2">Element </div>
+	    <div class="element elt3">Element </div>
+	</div>
+
 	<script src="../js/scripts.js"></script>
 </body>
 </html>
